added admin panel and home page
